# haskell-overview

./: README.md
cppcheck/: cppcheck.cabal  main.hs
cppcheck/App/Data/: Comment.hs  Define.hs  Expression.hs  File.hs  Include.hs  Parser.hs  Spaces.hs  TheType.hs  Using.hs
cppcheck/App/Data/Comment/: Parser.hs
cppcheck/App/Data/Define/: Parser.hs
cppcheck/App/Data/Digit/: Parser.hs
cppcheck/App/Data/Expression/: Parser.hs
cppcheck/App/Data/File/: Parser.hs
cppcheck/App/Data/Include/: Parser.hs
cppcheck/App/Data/Spaces/: Parser.hs
cppcheck/App/Data/TheType/: Parser.hs
cppcheck/App/Data/TheType/Parser/: BuiltinType.hs
cppcheck/App/Data/Using/: Parser.hs
cppcheck/App/Utils/: Parser.hs
cppcheck/UT/: main.hs  test.xml  ut.cabal
cppcheck/UT/App/: TestData.hs  XmlReader.hs
cppcheck/UT/tests/comment/: 1.fail  2.success  4.success  comments.xml
cppcheck/UT/tests/define/: 1.success  2.success  3.success  define.xml
cppcheck/UT/tests/file/: 1.fail  2.fail  3.success  4.success  5.success  6.success  7.success  8.success  9.success
cppcheck/UT/tests/include/: 1.fail  2.fail  3.fail
cppcheck/UT/tests/namespace/: 1.fail  2.fail  2.success  3.success  5.success  6.success  7.success
cppcheck/UT/tests/spaces/: 2.success  3.success
cppcheck/UT/tests/types/: 2.success  3.success  4.success  5.success  6.success
cppcheck/UT/tests/using/: 2.success  3.success
fm/: Main.hs  MainForm.hs  fm.cabal  todo.txt
fm/MainForm/: Actions.hs  ListView.hs  MenuBar.hs  State.hs
fm/MainForm/ListView/: Actions.hs  Events.hs
fm/Utils/: FilePath.hs
(+19 files in other folders)
